force-app/main/default/objects/PriceList__c/PriceList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Price List</label>
</CustomObject>