force-app/main/default/objects/PriceList__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>במלאי</label>
    <type>Checkbox</type>
</CustomField>