force-app/main/default/objects/PriceList__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>מכשיר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>