force-app/main/default/objects/PriceList__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <label>שעה</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>