force-app/main/default/objects/PriceList__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>תקופה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>