force-app/main/default/objects/PriceList__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>עדיפות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>