force-app/main/default/objects/PriceList__c/fields/Rikushet_Price__c.field-meta.xml
<CustomField>
    <fullName>Rikushet_Price__c</fullName>
    <label>מחיר ריקושט</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>